Bug fix for Bootstrap 4 modal jump

--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,6 +1,11 @@
 body, input {
     font-family: 'Source Sans Pro', sans-serif;
 }
+body.modal-open {
+    overflow: hidden;
+    position:fixed;
+    width: 100%;
+}
 #particles-js {
     position: absolute;
     top: 0;
